examples/test/testpolicy926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy926
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key22: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value6
          key30: value43
      podSelector:
        matchLabels:
          key30: value0
          key22: value33
